objects/Dedicated_Internal_Salesforce_Helpdesk__c.object
<CustomObject>
    <fields>
        <fullName>Account_to_be_Merged__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This account will be merged into the Primary Account</inlineHelpText>
        <label>Account to be Merged</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>D.I.S.H. (Account to be Merged)</relationshipLabel>
        <relationshipName>D_I_S_H1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approved_in_UAT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is to be checked by the ticket requester once the proposed changes have been accepted in UAT and can be moved to Production.</inlineHelpText>
        <label>Approved in UAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_Request_Type__c</fullName>
        <inlineHelpText>Feature - Create something new
Enhancement - Add fields or dropdown options, etc
Fix - Use when something is not working correctly</inlineHelpText>
        <label>Configuration Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please describe the request in detail.</inlineHelpText>
        <label>Description</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dish_Request_Status__c</fullName>
        <inlineHelpText>Updated by IT</inlineHelpText>
        <label>Dish Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold due to technology limitation</fullName>
                </value>
                <value>
                    <fullName>Awaiting Requester Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Requestor comment pending</fullName>
                    <label>Requester comment pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docusign_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Docusign User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_UAT_Sandbox_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In UAT Sandbox for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lightning_related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lightning related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_User_Email__c</fullName>
        <label>New User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_User_First_Name__c</fullName>
        <label>New User First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Last_Name__c</fullName>
        <label>New User Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Title__c</fullName>
        <label>New User Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHSS_Business__c</fullName>
        <label>PHSS Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service Delivery</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Training</fullName>
                </value>
                <value>
                    <fullName>Product Team</fullName>
                </value>
                <value>
                    <fullName>Business Operations</fullName>
                </value>
                <value>
                    <fullName>Customer Ops &amp; Admin Team</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Brand Licensing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <inlineHelpText>Only needed if they are a current certified Instructor.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Account that will remain after merge</inlineHelpText>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>D.I.S.H.</relationshipLabel>
        <relationshipName>D_I_S_H</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Object__c</fullName>
        <inlineHelpText>Only for Salesforce objects, not Saba or webi reports.</inlineHelpText>
        <label>Report Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Training Events</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dedicated_Internal_Salesforce_Helpdesk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <inlineHelpText>Date that you would like this request to be completed</inlineHelpText>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SABA_Username__c</fullName>
        <inlineHelpText>For DEACTIVATION requests please only enter the Saba UN if &apos;Saba LMS&apos; is selected in User Access.
For CREATION requests please enter the new hire&apos;s newly created Saba UN so that roles and permissions are added to the correct Saba record.</inlineHelpText>
        <label>SABA Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saba_User_Roles__c</fullName>
        <inlineHelpText>Only needed if you are requesting user get access to Saba LMS</inlineHelpText>
        <label>SABA User Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter Manager (Read Only)</fullName>
                </value>
                <value>
                    <fullName>Registrar</fullName>
                </value>
                <value>
                    <fullName>Offering Administration</fullName>
                </value>
                <value>
                    <fullName>Human Capital Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Access__c</fullName>
        <label>User Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Salesforce Training Sandbox</fullName>
                </value>
                <value>
                    <fullName>Skedulo</fullName>
                </value>
                <value>
                    <fullName>Instructor&apos;s Corner</fullName>
                </value>
                <value>
                    <fullName>PHSS SharePoint</fullName>
                </value>
                <value>
                    <fullName>SABA LMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Deactivation_Date__c</fullName>
        <inlineHelpText>Date you would like access terminated</inlineHelpText>
        <label>User Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Request_Type__c</fullName>
        <inlineHelpText>If existing User change, please provide previous position in the Additional Comments field</inlineHelpText>
        <label>User Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>Existing User Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_is_a_Certified_Instructor__c</fullName>
        <inlineHelpText>If this user becomes an Instructor at a later date, please notify Shweta.Kohli@redcross.org</inlineHelpText>
        <label>User is a Certified Instructor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_to_Deactivate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User to Deactivate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>D_I_S_H</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Users_Impacted__c</fullName>
        <label>Users Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 User</fullName>
                </value>
                <value>
                    <fullName>Entire Team</fullName>
                </value>
                <value>
                    <fullName>Organization Wide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>D.I.S.H.</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>DISH Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>D.I.S.H.</pluralLabel>
    <recordTypes>
        <fullName>Account_Merge_Requests</fullName>
        <active>true</active>
        <description>Use this record type to request an Account Merge</description>
        <label>Account Merge Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>Configuration_Request</fullName>
        <active>true</active>
        <description>Use this to request new fields, processes, etc.</description>
        <label>Configuration Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report_Request</fullName>
        <active>true</active>
        <description>Use this process to request creation of a new report</description>
        <label>Report Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Creation_Request</fullName>
        <active>true</active>
        <description>Use this process to request creation of a new user</description>
        <label>User Creation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Deactivation</fullName>
        <active>true</active>
        <description>Use this process to request deactivation of a User</description>
        <label>User Deactivation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>